<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/team_A_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <EditText
        android:id="@+id/ok_a_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:hint="@string/teamA"
        android:inputType="textCapWords"
        android:padding="20dp"
        android:textColor="#4C0000" />

    <EditText
        android:id="@+id/ok_b_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:hint="@string/teamB"
        android:inputType="textCapWords"
        android:padding="20dp"
        android:textColor="#4C0000" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button

            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="okNameTeam"
            android:padding="20dp"
            android:text="@string/ok"
            android:textSize="30sp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="start"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>
