<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/congrats"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/trophy"
            android:contentDescription="@string/trophy" />

        <TextView
            android:id="@+id/TheEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/trophy"
            android:layout_centerHorizontal="true"
            android:padding="28dp"
            android:text="@string/trophy"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:onClick="start"
        android:padding="20dp"
        android:text="@string/playAgain" />

</LinearLayout>